# Deliverable1_WebProject

./: README.md  prova 1.py
djangoProject3/: db.sqlite3  pyproject.toml
djangoProject3/app/: admin.py  models.py  views.py
djangoProject3/app/migrations/: 0001_initial.py  0002_awards_genres_titles.py  0003_rename_awards_award_rename_genres_genre_and_more.py  0004_remove_student_subjects_delete_assignment_and_more.py  0005_budget_name_rating.py  0006_remove_budget_movie_remove_rating_movie_title.py  0007_budget_movie.py  0008_rating_movie_title_remove_budget_movie_budget_movie.py
djangoProject3/app/static/: styles.css
djangoProject3/app/templates/: hello_world.html  layout.html  login.html  register.html  welcome.html
djangoProject3/djangoProject3/: settings.py  urls.py
