[tool.poetry]
name = "djangoproject3"
version = "0.1.0"
description = ""
authors = ["Eric <erickson.hdez18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
